Bug 354451. Fix uppercasing of &szlig; and possibly other regressions from bug 345071. r=smontagu,sr=rbs